aks_devops/Challenge2/AGIC/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresssprint
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/override-frontend-port: "80"
spec:
  rules:
  - host: {호스트네임을 설정해주세요.}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: {ServiceName을 입력해주세요.}
            port:
              number: 80
